--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt": "^3.11.1",
+    "pocketbase": "^0.21.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
