--- a/web/package.json
+++ b/web/package.json
@@ -10,13 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.5.1",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@tailwindcss/typography": "^0.5.12",
     "nuxt": "^3.11.1",
     "pocketbase": "^0.21.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.3.3",
+    "daisyui": "^4.9.0",
     "tailwindcss": "^3.4.3"
   }
 }
